output_10.1.168/copy_quda.cu.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/copy_quda.cu-5a45dd.hip:76:23: error: use of undeclared identifier cudaConfigureCall
        copyKernel<FloatN, N><<<tp.grid, tp.block, tp.shared_bytes, stream>>>(Y, X, length);
                             ^
In file included from <built-in>:1:
In file included from /sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:338:
/sw/summit/cuda/10.1.168/include/texture_indirect_functions.h:107:4: error: use of undeclared identifier '__nv_tex_surf_handler'
   __nv_tex_surf_handler("__itex1Dfetch", ptr, obj, x);
   ^
/sw/summit/cuda/10.1.168/include/texture_indirect_functions.h:116:3: note: in instantiation of function template specialization 'tex1Dfetch<int4>' requested here
  tex1Dfetch(&ret, texObject, x);
  ^
./quda/include/texture.h:41:46: note: in instantiation of function template specialization 'tex1Dfetch<int4>' requested here
{ double2 out; copyFloatN(out, fetch_double2(tex1Dfetch<int4>(spinor, idx))); return out; }
                                             ^
3 errors generated when compiling for host.
Error while processing /tmp/copy_quda.cu-5a45dd.hip.

[HIPIFY] info: file './quda/lib/copy_quda.cu' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 4
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 72
  TOTAL bytes: 17718
  CHANGED lines of code: 5
  TOTAL lines of code: 364
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 1
  TIME ELAPSED s: 0.87
[HIPIFY] info: CONVERTED refs by type:
  type: 2
  numeric_literal: 2
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 4
[HIPIFY] info: CONVERTED refs by names:
  cudaMemcpyDeviceToDevice: 2
  cudaStream_t: 2
